started work on home.html

--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -1,10 +1,43 @@
 <!DOCTYPE html>
-<html lang="en">
+<html xmlns:th="http://www.thymleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Home</title>
 </head>
-<body>
+<nav>
 
+    <a href="#aboutUs">About Us</a>
+    <a href="#country">Countries</a>
+
+
+</nav>
+
+<header>
+
+    <h1>Welcome</h1>
+</header>
+<body>
+<h1>What is Bird Watching?</h1>
+
+<ul>
+    <li>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</li>
+    <li>Maecenas vel risus ut nunc rutrum consectetur.</li>
+    <li>Integer ac neque tristique diam ullamcorper pharetra.</li>
+
+</ul>
+<main>
+
+    <h2>What Can We Do For You?</h2>
+
+    <ul>
+
+        <li>Ut sed sem sit amet elit eleifend maximus sed et augue.</li>
+        <li>Mauris accumsan orci et mauris pharetra dignissim.</li>
+        <li>Proin interdum turpis vel laoreet cursus.</li>
+    </ul>
+
+
+
+</main>
 </body>
 </html>
