--- a/src/main/resources/templates/about-us.html
+++ b/src/main/resources/templates/about-us.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="/style.css">
     <title>About Us</title>
 </head>
 <body>
@@ -12,7 +12,7 @@
             <ul>
                 <li><a href="/">Home</a></li>|
                 <li><a href="/about-us">About Us</a></li>|
-                <li><a href="/country">Countries</a></li>
+                <li><a href="/countries">Countries</a></li>
             </ul>
         </nav>
     </header>
