--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -6,17 +6,19 @@
     <link rel="stylesheet" href="/style.css">
     <title>Home</title>
 </head>
+
+<header>
+    <nav class="center">
+        <ul>
+            <li><a href="/">Home</a></li>|
+            <li><a href="/about-us">About Us</a></li>|
+            <li><a href="/countries">Countries</a></li>
+        </ul>
+    </nav>
+    <h1>Welcome</h1>
+</header>
+
 <body>
-    <header>
-        <nav class="center">
-            <ul>
-                <li><a href="/">Home</a></li>|
-                <li><a href="/about-us">About Us</a></li>|
-                <li><a href="/countries">Countries</a></li>
-            </ul>
-        </nav>
-        <h1>Welcome</h1>
-    </header>
 
     <main>
         <h1>What is Bird Watching?</h1>
@@ -50,7 +52,7 @@
                 <tr th:each="country :${countries}">
                     <td th:text="${country.id}"></td>
                     <td><a th:href=" '/countries/' + ${country.id} " th:text="${country.countryName}"></a></td>
-                    <td th:text="${country.region}"></td>
+                    <td><a th:href=" '/countries/' + ${country.id} " th:text="${country.region}"></a></td>
                     <td th:text="${country.habitat}"></td>
 
                 </tr>
