--- a/src/main/resources/templates/bird.html
+++ b/src/main/resources/templates/bird.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="/style.css">
-        <title>Country</title>
+        <title>Bird</title>
     </head>
     <body>
         <header>
@@ -29,22 +29,15 @@
                     </li>
                 </ul>
             </nav>
-
-            <h1><u>Country details</u></h1>
-
+            <h1 th:text="${bird.birdName}"></h1>
         </header>
-
         <main>
-            <ul>
-                <li th:text="'Id: '+ ${country.id}"></li>
-                <li th:text="'Country: '+ ${country.countryName}"></li>
-                <li th:text="'Region: '+ ${country.region}"></li>
-                <li th:text="'Habitat: '+ ${country.habitat}"></li>
-            </ul>
+            <!--main-->
         </main>
-
         <footer>
             <p>©2022 Copyright WCCI Team 2</p>
         </footer>
+
     </body>
+
 </html>
