--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -12,7 +12,21 @@
             <ul>
                 <li><a href="/">Home</a></li>|
                 <li><a href="/about-us">About Us</a></li>|
-                <li><a href="/countries">Countries</a></li>
+                <li><a href="/countries">Countries</a></li>|
+                <li><a href="/regions">Regions</a></li>|
+                <li><a href="/birds">Birds</a></li>|
+                <li><a href="/users">Users</a></li>|
+                <li>&nbsp;&nbsp;&nbsp;&nbsp;</li>
+                <li>
+                    <a href="/admin">Administration</a>
+                    <div class="sub-menu">
+                        <div class="sub-nav"><a href="/admin/countries">Manage Countries</a></div>
+                        <div class="sub-nav"><a href="/admin/regions">Manage Regions</a></div>
+                        <div class="sub-nav"><a href="/admin/birds">Manage Birds</a></div>
+                        <div class="sub-nav"><a href="/admin/users">Manage Users</a></div>
+
+                    </div>
+                </li>
             </ul>
         </nav>
         <h1>Welcome</h1>
