--- a/src/main/resources/static/style.css
+++ b/src/main/resources/static/style.css
@@ -1,6 +1,6 @@
 * {
   font-family: Calibri, 'Trebuchet MS', sans-serif;
-  font-size: 20px;
+  font-size: 16px;
   color: #000;
  }
 
@@ -28,6 +28,19 @@ nav {
     margin: 0 0 40px 0;
 }
 
+.pass-sub-menu{
+
+    width:200px;
+}
+
+.sub-menu{
+    opacity: 0.5;
+    position: relative;
+    top: 10px;
+    left: 10px;
+    width:200px;
+    background:#ddd;
+}
 /*-------end nav------------*/
 
 /*-------main------------*/
