adjusted flex in main page, embed design to others pages, took off Region in populator

--- a/src/main/resources/static/style.css
+++ b/src/main/resources/static/style.css
@@ -1,82 +1,321 @@
-* {
-  font-family: Calibri, 'Trebuchet MS', sans-serif;
-  font-size: 16px;
-  color: #000;
- }
+@import url(https://fonts.googleapis.com/css?family=Shrikhand);
 
-Body {
-    margin: 50px auto;
-    max-width: 1020px;
 
+html, body{
+    margin: 0;
+    box-sizing: border-box;
+    overflow-x: hidden;
+    font-family: 'Roboto', sans-serif;
 }
 
-header, main, footer {
- margin: 0 50px;
+/* ---------------- Global Classes ---------------*/
+
+a{
+    text-decoration: none;
 }
 
-/*-------nav------------*/
-nav ul li {
-    display: inline;
-    margin: 0 15px;
+.logo {
+	   	font-family: "Shrikhand", sans-serif;
+    	font-size: 20px;
+    	padding:20px 0 0;
+}
+.title{
+    margin:50px 0 20px 50px;
+    font-size:20px;
+    font-weight: 600;
+    color: #777;
+}
+.content{
+    margin: 0 10px 50px 20px;
+}
+.flex-row{
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
 }
 
-nav a{
-       font-weight:600;
+
+ul{
+    list-style-type: none;
 }
 
-nav {
-    margin: 0 0 40px 0;
+h1{
+    font-family: 'Roboto', sans-serif;
+    font-size: 2.5rem;
 }
 
-.pass-sub-menu{
-
-    width:200px;
+h2{
+     font-family: 'Roboto', sans-serif;
 }
 
-.sub-menu{
-    opacity: 0.5;
+h3{
+     font-family: 'Roboto', sans-serif;
+    font-size: 1.3rem;
+}
+
+button.btn{
+    border: none;
+    border-radius: 2rem;
+    padding: 1rem 3rem;
+    font-size: 1rem;
+    cursor: pointer;
+}
+
+/* ------x------- Global Classes -------x-------*/
+
+/* --------------- navbar ----------------- */
+
+.nav{
+    background: white;
+    padding: 0 2rem;
+    height: 0rem;
+    min-height: 10vh;
+    overflow: hidden;
+}
+
+.nav .nav-menu{
+    justify-content: space-between;
+}
+
+.nav .nav-items{
+    display: flex;
+    margin: 0;
+}
+
+.nav .nav-items .nav-link{
+    padding: 1.6rem 1rem;
+    font-size: 1.1rem;
     position: relative;
-    top: 10px;
-    left: 10px;
-    width:200px;
-    background:#ddd;
-}
-/*-------end nav------------*/
-
-/*-------main------------*/
-main  img{
-     margin: 10px;
+    font-family: 'Roboto', sans-serif;
 }
 
-/*-------end main----------*/
+.nav .nav-items .nav-link:hover{
+    background-color: #FFC100;
+}
 
-/*-------footer------------*/
-footer{
-    margin:50px 0 20px;
+.nav .nav-items .nav-link:hover a{
+    color:white;
+}
+.nav .nav-brand a{
+    font-size: 1.6rem;
+    padding: 1rem 0;
+    display: block;
+    font-family: 'Roboto', sans-serif;
+}
+.social-top{
+ margin: 20px 0 0;
+}
+.nav .social{
+    padding: .4rem 0;
+}
+
+.nav .social{
+    padding: 0.2rem;
+}
+
+.nav .social i:hover{
+    color: #FFEAAE;
+}
+
+/* -------x------- navbar ---------x------- */
+
+/*----------------main content-------------*/
+
+/*-------------site title--------------*/
+main{
+    margin: 0;
+}
+main .site-title{
+    background: url('/images/sunshiney-indonesian-valley-filled-with-rice-paddies.jpg');
+    background-size: cover;
+    height: 110vh;
+    display: flex;
+    justify-content: center;
+
+}
+main .site-title .site-background{
+    padding-top: 10rem;
+    text-align: center;
+    color: black;
+
+}
+
+main .site-title h1, h3{
+    margin: .3rem;
+}
+main .site-title .btn{
+    margin: 1.8rem;
+    background: #FFC100;
+}
+
+main .site-title .btn:hover{
+   /* background: transparent;*/
+    background: #999;
+    border: 1px solid white;
+    /*color: #ddd;*/
+    color: white;
+}
+
+/*----x---------site title--------------*/
+.box-container{
+	display:flex;
+	justify-content: space-around;
+	flex-direction: row;
+}
+.box-1,.box-2,.box-3{
+	width: 300px;
+	height:320px;
+	background-repeat: no-repeat;
+	background-size: cover;
+	box-shadow:2px 2px 18px rgba(0,0,0,0.3);
+	align-items: center;
+	justify-content: center;
+	display: flex;
+	flex-direction: column;
+	margin: 0px 20px;
+}
+
+.box-container-country{
+    display:flex;
+	justify-content: space-around;
+	flex-direction: row;
+	flex-wrap: wrap;
+}
+
+.box-country{
+    width: 200px;
+	height:250px;
+	background-repeat: no-repeat;
+	background-size: cover;
+	box-shadow:2px 2px 18px rgba(0,0,0,0.3);
+	align-items: center;
+	justify-content: center;
+	display: flex;
+	flex-direction: column;
+	margin: 0px 20px 40px;
+	}
+.box-country .heading{
+    color: #979797;
+    font-size: 23px;
+    line-height: 0px;
+}
+
+.box-country .details{
+    color: #8F8F8F;
+    text-align: center;
+    width: 230px;
+    margin: 0px 0px 20px 0px;
+}
+
+.box-country button{
+	width:100px;
+	height:30px;
+	background-color:#FFC100;
+	border:none;
+	outline: none;
+	border-radius:20px;
+	cursor:pointer;
+}
+
+.box-country button:hover{
+	background-color:#ddd;
+}
+
+.box-large{
+	width: 100%;
+	height:320px;
+	background-repeat: no-repeat;
+	background-size: cover;
+	box-shadow:2px 2px 18px rgba(0,0,0,0.3);
+	align-items: center;
+	text-align: center;
+	margin: 70px 0px;
+	padding: 20px;
+
+}
+
+.box-1 span,
+.box-2 span,
+.box-3 span {
+	width:30px;
+	height:30px;
+	border-radius:50%;
+	background-color:#ffffff;
+	display: flex;
+	justify-content: center;
+	align-items:center;
+	font-family: calibri;
+	font-weight: bold;
+}
+.box-1 p:nth-child(2),
+.box-2 p:nth-child(2),
+.box-3 p:nth-child(2){
+	color:#979797;
+	font-family: calibri;
+	font-size: 23px;
+	line-height:0px;
+
+}
+.box-1 p:nth-child(3),
+.box-2 p:nth-child(3),
+.box-3 p:nth-child(3){
+	font-family: calibri;
+	color:#8F8F8F;
+	text-align:center;
+	width: 230px;
+	margin:0px 0px 20px 0px;
+
+}
+.box-1 button,
+.box-2 button,
+.box-3 button{
+	width:100px;
+	height:30px;
+	background-color:#FFFFFF;
+	border:none;
+	outline: none;
+	border-radius:5px;
+	cursor: pointer;
+}
+.fa-map-marker{
+    color: #333; /*#FFC100;*/
+}
+
+main .content .img-left {
+    margin: 0 20px 10px 0px;
+    float: left;
+}
+.clear{
+    clear:both;
+}
+main .content .img-right {
+    margin: 0 0px 10px 20px;
+    float: right;
+}
+main .range {
+    margin: 30px 50px 70px 50px;
+}
+
+.center{
+    text-align:center;
+}
+.y-separation{
+    margin: 30px 0;
+}
+
+.x-separation{
+    margin: 0 30px;
+}
+/*-------x---------main content-------------*/
+
+/*-----------------footer---------------------*/
+footer {
+    background-size: cover;
+ 	box-shadow:2px 2px 18px rgba(0,0,0,0.3);
+    margin:50px 0 -5px;
 }
 
 footer p {
+    padding:30px 0 20px 50px;
     font-size:12px;
-}
-/*-------end footer------------*/
-
-.center{
-    text-align: center;
-}
-
-y-separation{
-    margin:30px 0;
-}
-
-x-separation{
-    margin:0 30px ;
-}
-
-a{
-    text-decoration:none;
-    color: #1a2b8d;
-}
-
-a:hover{
-    color: #c03;
 }
