--- a/src111/main/resources/templates/bird.html
+++ b/src111/main/resources/templates/bird.html
@@ -15,7 +15,7 @@
             <li><a href="/countries">Countries</a></li>
         </ul>
     </nav>
-    <h1 th:text=""></h1>
+    <h1 th:text="${birdModel.birdName}"></h1>
 
 </header>
 
