--- a/src111/main/resources/templates/region.html
+++ b/src111/main/resources/templates/region.html
@@ -2,9 +2,8 @@
 <html xmlns:th="http://www.thymleaf.org">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/style.css">
-    <title>Bird</title>
+    <title>Title</title>
+    <h1>Region</h1>
 </head>
 
 <header>
@@ -15,15 +14,11 @@
             <li><a href="/countries">Countries</a></li>
         </ul>
     </nav>
-    <h1 th:text=""></h1>
+    <h1 th:text="${regionModel.regionName}"></h1>
 
 </header>
 
 <body>
 
-
 </body>
-<footer>
-    <p>©2022 Copyright WCCI Team 2</p>
-</footer>
 </html>
