--- a/src/main/resources/templates/about-us.html
+++ b/src/main/resources/templates/about-us.html
@@ -1,67 +1,94 @@
+
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymleaf.org">
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" href="/style.css">
-        <title>About Us</title>
-    </head>
-    <body>
-        <header>
-            <nav class="center">
-                <ul>
-                    <li><a href="/">Home</a></li>|
-                    <li><a href="/about-us">About Us</a></li>|
-                    <li><a href="/countries">Countries</a></li>|
-                    <li><a href="/regions">Regions</a></li>|
-                    <li><a href="/birds">Birds</a></li>|
-                    <li><a href="/users">Users</a></li>|
-                    <li>&nbsp;&nbsp;&nbsp;&nbsp;</li>
-                    <li>
-                        <a href="/admin">Administration</a>
-                        <div class="sub-menu">
-                            <div class="sub-nav"><a href="/admin/countries">Manage Countries</a></div>
-                            <div class="sub-nav"><a href="/admin/regions">Manage Regions</a></div>
-                            <div class="sub-nav"><a href="/admin/birds">Manage Birds</a></div>
-                            <div class="sub-nav"><a href="/admin/users">Manage Users</a></div>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
+          integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf"
+          crossorigin="anonymous" />
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
+    <script src="https://kit.fontawesome.com/aba5373111.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="/style.css">
+    <title>Jac Enterprise</title>
+</head>
+<body>
+<header>
+    <!--X----------------Nav Bar----------------------->
+    <nav class="nav">
+        <div class="nav-menu flex-row">
+            <div class="logo">
+                <a href="/" class="text-grey">Jac Enterprise</a>
+            </div>
 
-                        </div>
-                    </li>
+            <div>
+                <ul class="nav-items">
+                    <li class="nav-link"><a href="/">Home</a></li>
+                    <li class="nav-link"><a href="/about-us">About Us</a></li>
+                    <li class="nav-link" ><a href="/countries">Countries</a></li>
+                    <li class="nav-link"><a href="/regions">Regions</a></li>
+                    <li class="nav-link"><a href="/birds">Birds</a></li>
                 </ul>
-            </nav>
-        </header>
+            </div>
+            <div class="social text-gray social-top">
+                <a href="#"><i class="fa-brands fa-facebook-f"></i></a>
+                <a href="#"><i class="fa-brands fa-instagram"></i></a>
+                <a href="#"><i class="fa-brands fa-twitter"></i></a>
+            </div>
+        </div>
+    </nav>
 
-        <main>
-            <h1>About Us</h1>
-            <h3><img src="./images/pingouin.jpg" alt="" width="250" align="left">Every avid birder wants to fulfill the dream of going on a birding excursion,
-                so they check out birding tours. They relish the prospect of interacting with
-                other bird lovers from all over the world.
-            </h3>
-            <p>In fact, some of these touring businesses specialize in specific regions of the world
-                and cater to birders of all levels, from beginners to experts.<br><br>
+    <!--X----------------Nav Bar----------------------->
+</header>
 
-                There are bird watching tours going to just about every corner of the world. Y
-                ou can find these birding trips to destinations all over the U.S., Israel,
-                South America, Alaska, Hawaii, New Zealand, Trinidad & Tobago, and Madeira to list
-                just a few.<br><br>
+<!--X---------------main----------------------->
+<main>
+    <div class="title">About Us</div>
+    <div class="content range">
+        <h3><img src="./images/pingouin.jpg" alt="" width="250"  class="img-left">Every avid birder wants to fulfill the dream of going on a birding excursion,
+            so they check out birding tours. They relish the prospect of interacting with
+            other bird lovers from all over the world.
+        </h3>
+        <p>In fact, some of these touring businesses specialize in specific regions of the world
+            and cater to birders of all levels, from beginners to experts.<br><br>
 
-                <img src="./images/griffe.jpg" alt="" width="250" align="left">You name a place and more than likely there’s a gathering of bird watchers going there.
-                Tours for bird enthusiasts are arranged even for remote places like Morocco, Coastal Kenya,
-                Botswana, Madagascar, Mozambique, Falkland Islands and many, many more.<br><br>
+            There are bird watching tours going to just about every corner of the world. Y
+            ou can find these birding trips to destinations all over the U.S., Israel,
+            South America, Alaska, Hawaii, New Zealand, Trinidad & Tobago, and Madeira to list
+            just a few.<br><br>
 
-                There are agencies that offer photo combination bird and nature tours where you visit
-                birds and animals in their natural habitats. One such company, Exotic Birding, states
-                that their photo tours “differ from traditional nature photo workshops in that there
-                is no classroom instruction or formal critique of participant photographs. Instead,
-                we concentrate our efforts on making environmental portraits, that is, portraits of
-                birds and animals in their natural environments.”<br><br>
-            <div class="y-separation center"><img src="./images/peroquet.jpg" alt="" ></div>
-            </p>
-        </main>
+            <img src="./images/griffe.jpg" alt="" width="250"  class="img-left">You name a place and more than likely there’s a gathering of bird watchers going there.
+            Tours for bird enthusiasts are arranged even for remote places like Morocco, Coastal Kenya,
+            Botswana, Madagascar, Mozambique, Falkland Islands and many, many more.<br><br>
 
-        <footer>
-            <p>©2022 Copyright WCCI Team 2</p>
-        </footer>
+            There are agencies that offer photo combination bird and nature tours where you visit
+            birds and animals in their natural habitats. One such company, Exotic Birding, states
+            that their photo tours “differ from traditional nature photo workshops in that there
+            is no classroom instruction or formal critique of participant photographs. Instead,
+            we concentrate our efforts on making environmental portraits, that is, portraits of
+            birds and animals in their natural environments.”<br><br>
+        <div class="y-separation center"><img src="./images/peroquet.jpg" alt="" class="y-separation"></div>
+        </p>
+    </div>
 
-    </body>
+    <div class="title">Popular Destinations</div>
+    <div class="box-container-country">
+        <!--1------------->
+        <div class="box-country"  th:each="country :${countries}">
+            <span><i class="fa fa-map-marker"></i></span>
+            <p class="heading" th:text="${country.countryName}"></p>
+            <p class="details" th:text="${country.region}"></p>
+            <p class="details" th:text="${country.habitat}"></p>
+
+            <a th:href=" '/countries/' + ${country.id} " > <button th:text="'Learn More'"></button></a>
+
+        </div>
+    </div>
+</main>
+
+<!--X---------------footer----------------------->
+<footer>
+    <p>©2022 Copyright WCCI Team 2</p>
+</footer>
+</body>
 </html>
