--- a/src/main/resources/templates/country.html
+++ b/src/main/resources/templates/country.html
@@ -3,46 +3,69 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
+          integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf"
+          crossorigin="anonymous" />
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
+    <script src="https://kit.fontawesome.com/aba5373111.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="/style.css">
-    <title>Country</title>
+    <title>Jac Enterprise</title>
 </head>
 <body>
 <header>
-    <nav class="center">
-        <ul>
-            <li><a href="/">Home</a></li>|
-            <li><a href="/about-us">About Us</a></li>|
-            <li><a href="/countries">Countries</a></li>|
-            <li><a href="/regions">Regions</a></li>|
-            <li><a href="/birds">Birds</a></li>|
-            <li><a href="/users">Users</a></li>|
-            <li>&nbsp;&nbsp;&nbsp;&nbsp;</li>
-            <li>
-                <a href="/admin">Administration</a>
-                <div class="sub-menu">
-                    <div class="sub-nav"><a href="/admin/countries">Manage Countries</a></div>
-                    <div class="sub-nav"><a href="/admin/regions">Manage Regions</a></div>
-                    <div class="sub-nav"><a href="/admin/birds">Manage Birds</a></div>
-                    <div class="sub-nav"><a href="/admin/users">Manage Users</a></div>
+    <!--X----------------Nav Bar----------------------->
+    <nav class="nav">
+        <div class="nav-menu flex-row">
+            <div class="logo">
+                <a href="/" class="text-grey">Jac Enterprise</a>
+            </div>
 
-                </div>
-            </li>
-        </ul>
+            <div>
+                <ul class="nav-items">
+                    <li class="nav-link"><a href="/">Home</a></li>
+                    <li class="nav-link"><a href="/about-us">About Us</a></li>
+                    <li class="nav-link" ><a href="/countries">Countries</a></li>
+                    <li class="nav-link"><a href="/regions">Regions</a></li>
+                    <li class="nav-link"><a href="/birds">Birds</a></li>
+                </ul>
+            </div>
+            <div class="social text-gray social-top">
+                <a href="#"><i class="fa-brands fa-facebook-f"></i></a>
+                <a href="#"><i class="fa-brands fa-instagram"></i></a>
+                <a href="#"><i class="fa-brands fa-twitter"></i></a>
+            </div>
+        </div>
     </nav>
 
-    <h1><u>Country details</u></h1>
-
+    <!--X----------------Nav Bar----------------------->
 </header>
 
+<!--X---------------main----------------------->
 <main>
-    <ul>
-        <li th:text="'Id: '+ ${country.id}"></li>
-        <li th:text="'Country: '+ ${country.countryName}"></li>
-        <li th:text="'Region: '+ ${country.region}"></li>
-        <li th:text="'Habitat: '+ ${country.habitat}"></li>
-    </ul>
+    <div class="title" th:text="'Country: '+ ${country.countryName} "></div>
+    <div class="content">
+        <ul>
+            <li th:text="'Region: '+ ${country.region}"></li>
+            <li th:text="'Habitat: '+ ${country.habitat}"></li>
+        </ul>
+    </div>
+
+    <div class="title">Popular Destinations</div>
+    <div class="box-container-country">
+        <!--1------------->
+        <div class="box-country"  th:each="country :${countries}">
+            <span><i class="fa fa-map-marker"></i></span>
+            <p class="heading" th:text="${country.countryName}"></p>
+            <p class="details" th:text="${country.region}"></p>
+            <p class="details" th:text="${country.habitat}"></p>
+
+            <a th:href=" '/countries/' + ${country.id} " > <button th:text="'Learn More'"></button></a>
+
+        </div>
+    </div>
 </main>
 
+<!--X---------------footer----------------------->
 <footer>
     <p>©2022 Copyright WCCI Team 2</p>
 </footer>
