--- a/src111/main/resources/templates/country.html
+++ b/src111/main/resources/templates/country.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/style.css">
-    <title>Bird</title>
+    <title>Country</title>
 </head>
 
 <header>
@@ -15,15 +15,25 @@
             <li><a href="/countries">Countries</a></li>
         </ul>
     </nav>
-    <h1 th:text=""></h1>
+
+    <h1><u>Country details</u></h1>
 
 </header>
 
 <body>
 
 
-</body>
+<main>
+    <ul>
+        <li th:text="'Id: '+ ${country.id}"></li>
+        <li th:text="'Country: '+ ${country.countryName}"></li>
+        <li th:text="'Region: '+ ${country.region}"></li>
+        <li th:text="'Habitat: '+ ${country.habitat}"></li>
+    </ul>
+</main>
+
 <footer>
     <p>©2022 Copyright WCCI Team 2</p>
 </footer>
+</body>
 </html>
