--- a/src/main/resources/templates/about-us.html
+++ b/src/main/resources/templates/about-us.html
@@ -45,30 +45,37 @@
 <main>
     <div class="title">About Us</div>
     <div class="content range">
-        <h3><img src="./images/pingouin.jpg" alt="" width="250"  class="img-left">Every avid birder wants to fulfill the dream of going on a birding excursion,
-            so they check out birding tours. They relish the prospect of interacting with
-            other bird lovers from all over the world.
-        </h3>
-        <p>In fact, some of these touring businesses specialize in specific regions of the world
-            and cater to birders of all levels, from beginners to experts.<br><br>
+        <div>
+            <img src="./images/pingouin.jpg" alt="" width="250"  class="img-left">
+            <img src="./images/griffe.jpg" alt="" width="250"  class="img-left">
+        </div>
+        <div>
+            <h3>Every avid birder wants to fulfill the dream of going on a birding excursion,
+                so they check out birding tours. They relish the prospect of interacting with
+                other bird lovers from all over the world.
+            </h3>
+            <p>In fact, some of these touring businesses specialize in specific regions of the world
+                and cater to birders of all levels, from beginners to experts.<br><br>
 
-            There are bird watching tours going to just about every corner of the world. Y
-            ou can find these birding trips to destinations all over the U.S., Israel,
-            South America, Alaska, Hawaii, New Zealand, Trinidad & Tobago, and Madeira to list
-            just a few.<br><br>
+                There are bird watching tours going to just about every corner of the world. Y
+                ou can find these birding trips to destinations all over the U.S., Israel,
+                South America, Alaska, Hawaii, New Zealand, Trinidad & Tobago, and Madeira to list
+                just a few.<br><br>
 
-            <img src="./images/griffe.jpg" alt="" width="250"  class="img-left">You name a place and more than likely there’s a gathering of bird watchers going there.
-            Tours for bird enthusiasts are arranged even for remote places like Morocco, Coastal Kenya,
-            Botswana, Madagascar, Mozambique, Falkland Islands and many, many more.<br><br>
+                You name a place and more than likely there’s a gathering of bird watchers going there.
+                Tours for bird enthusiasts are arranged even for remote places like Morocco, Coastal Kenya,
+                Botswana, Madagascar, Mozambique, Falkland Islands and many, many more.<br><br>
 
-            There are agencies that offer photo combination bird and nature tours where you visit
-            birds and animals in their natural habitats. One such company, Exotic Birding, states
-            that their photo tours “differ from traditional nature photo workshops in that there
-            is no classroom instruction or formal critique of participant photographs. Instead,
-            we concentrate our efforts on making environmental portraits, that is, portraits of
-            birds and animals in their natural environments.”<br><br>
-        <div class="y-separation center"><img src="./images/peroquet.jpg" alt="" class="y-separation"></div>
-        </p>
+                There are agencies that offer photo combination bird and nature tours where you visit
+                birds and animals in their natural habitats. One such company, Exotic Birding, states
+                that their photo tours “differ from traditional nature photo workshops in that there
+                is no classroom instruction or formal critique of participant photographs. Instead,
+                we concentrate our efforts on making environmental portraits, that is, portraits of
+                birds and animals in their natural environments.”<br><br>
+            <div class="y-separation center"><img src="./images/peroquet.jpg" alt="" class="y-separation"></div>
+            </p>
+        </div>
+
     </div>
 
     <div class="title">Popular Destinations</div>
