updated about us images

--- a/src/main/resources/templates/about-us.html
+++ b/src/main/resources/templates/about-us.html
@@ -46,8 +46,12 @@
     <div class="title">About Us</div>
     <div class="content range">
         <div>
-            <img src="./images/pingouin.jpg" alt="" width="250"  class="img-left">
-            <img src="./images/griffe.jpg" alt="" width="250"  class="img-left">
+            <img src="./images/Adam.jpg" alt="" width="250"  class="img-left">
+            <img src="./images/Hailey.jpg" alt="" width="250"  class="img-left">
+            <img src="./images/Hakan.jpg" alt="" width="250"  class="img-left">
+            <img src="./images/Louis.jpg" alt="" width="250"  class="img-left">
+            <img src="./images/Mark.jpg" alt="" width="250"  class="img-left">
+
         </div>
         <div>
             <h3>Every avid birder wants to fulfill the dream of going on a birding excursion,
