created travelController to map travel.html so we can upload desctinations; filled out some info on homepage (What is Bird Watching?)

--- a/src/main/resources/templates/birds.html
+++ b/src/main/resources/templates/birds.html
@@ -27,6 +27,7 @@
                         <li class="nav-link" ><a href="/countries">Countries</a></li>
                         <li class="nav-link"><a href="/regions">Regions</a></li>
                         <li class="nav-link"><a href="/birds">Birds</a></li>
+                        <li class="nav-link"><a href="/travel">Travel</a></li>
                     </ul>
                 </div>
                 <div class="social text-gray social-top">
