--- a/src/main/resources/templates/about-us.html
+++ b/src/main/resources/templates/about-us.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymleaf.org">
 <head>
@@ -28,6 +27,7 @@
                     <li class="nav-link" ><a href="/countries">Countries</a></li>
                     <li class="nav-link"><a href="/regions">Regions</a></li>
                     <li class="nav-link"><a href="/birds">Birds</a></li>
+                    <li class="nav-link"><a href="/travel">Travel</a></li>
                 </ul>
             </div>
             <div class="social text-gray social-top">
@@ -45,12 +45,28 @@
 <main>
     <div class="title">About Us</div>
     <div class="content range">
-        <div>
+        <div class="cards">
+
+            <div class="card">
             <img src="./images/Adam.jpg" alt="" width="250"  class="img-left">
+            <p>from Columbus, OH interested in PC gaming and RC cars</p>
+            </div>
+            <div class="card">
             <img src="./images/Hailey.jpg" alt="" width="250"  class="img-left">
+            <p>from Columbus, OH interested in live music</p>
+            </div>
+            <div class="card">
             <img src="./images/Hakan.jpg" alt="" width="250"  class="img-left">
+            <p>from Independence, Ky interested in nature</p>
+            </div>
+            <div class="card">
             <img src="./images/Louis.jpg" alt="" width="250"  class="img-left">
+            <p>from Columbus, OH interested in</p>
+            </div>
+            <div class="card">
             <img src="./images/Mark.jpg" alt="" width="250"  class="img-left">
+            <p>from Cleveland, OH interested in</p>
+            </div>
 
         </div>
         <div>
