--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -27,6 +27,7 @@
                     <li class="nav-link" ><a href="/countries">Countries</a></li>
                     <li class="nav-link"><a href="/regions">Regions</a></li>
                     <li class="nav-link"><a href="/birds">Birds</a></li>
+                    <li class="nav-link"><a href="/travel">Travel</a></li>
                 </ul>
             </div>
             <div class="social text-gray social-top">
@@ -73,7 +74,6 @@
             </div>
             <!--3------------->
             <div class="box-3">
-<!--                <span><i class="fa-regular fa-crow"></i></span>-->
                 <span><i class="fas fa-crow"></i></span>
                 <p class="heading">Birds</p>
                 <p class="details">In Asia</p>
@@ -90,17 +90,20 @@
             <h1>What is Bird Watching?</h1>
 
             <ul>
-                <li>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</li>
-                <li>Maecenas vel risus ut nunc rutrum consectetur.</li>
-                <li>Integer ac neque tristique diam ullamcorper pharetra.</li>
+                <li>Bird watching is in its most basic form is observing any activity wherein
+                    birds are envolved in for recreaction or citizen science.</li>
+                <li>Many watch for recreation or because of their fascination of the species.</li>
+                <li>Others do it for science and record their behavior.</li>
+                <li>You can watch birds with the naked eye, some prefer to use binoculars or telescopes.</li>
             </ul>
 
             <h2>What Can We Do For You?</h2>
 
             <ul>
-                <li>Ut sed sem sit amet elit eleifend maximus sed et augue.</li>
-                <li>Mauris accumsan orci et mauris pharetra dignissim.</li>
-                <li>Proin interdum turpis vel laoreet cursus.</li>
+                <li>Plan your next bird watching trip with us. We can provide local restaurants and
+                    local hotspot destinations near top bird watching sites.</li>
+                <li>Book with us today.</li>
+
             </ul>
         </div>
     </div>
