--- a/src/main/resources/templates/travel.html
+++ b/src/main/resources/templates/travel.html
@@ -17,7 +17,7 @@
     <nav class="nav">
         <div class="nav-menu flex-row">
             <div class="logo">
-                <a href="/" class="text-grey">Jac Enterprise</a>
+                <a href="/travel" class="text-grey">Jac Enterprise</a>
             </div>
 
             <div>
@@ -41,30 +41,7 @@
     <!--X----------------Nav Bar----------------------->
 </header>
 
-<!--X---------------main----------------------->
-<main>
-    <div class="title" th:text="'Country: '+ ${country.countryName} "></div>
-    <div class="content">
-        <ul>
-            <li th:text="'Region: '+ ${country.region}"></li>
-            <li th:text="'Habitat: '+ ${country.habitat}"></li>
-        </ul>
-    </div>
 
-    <div class="title">Popular Destinations</div>
-    <div class="box-container-country">
-        <!--1------------->
-        <div class="box-country"  th:each="country :${countries}">
-            <span><i class="fa fa-map-marker"></i></span>
-            <p class="heading" th:text="${country.countryName}"></p>
-            <p class="details" th:text="${country.region}"></p>
-            <p class="details" th:text="${country.habitat}"></p>
-
-            <a th:href=" '/countries/' + ${country.id} " > <button th:text="'Learn More'"></button></a>
-
-        </div>
-    </div>
-</main>
 
 <!--X---------------footer----------------------->
 <footer>
