fixed alignment on footer

--- a/src/main/resources/templates/regions.html
+++ b/src/main/resources/templates/regions.html
@@ -58,7 +58,54 @@
 
 <!--X---------------footer----------------------->
 <footer>
-    <p>©2022 Copyright WCCI Team 2</p>
+    <div class="container">
+        <div class="row">
+            <div class="col-md-1">
+                <h6>
+                    Jac <strong>Enterprise</strong>
+                </h6>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Error quaerat inventore,
+                    excepturi esse voluptates et quae ut optio quibusdam,
+                </p>
+                <p>eligendi libero modi nisi aut veniam obcaecati? Dolorem minima quae dolore!</p>
+                <p>©2022 Copyright WCCI Team 2</p>
+            </div>
+            <div class="col-md-1">
+                <div class="address">
+                    <h6>
+                        contact info
+                    </h6>
+                    <div>
+
+                        <p> <strong>Address</strong><br> bird paradise <br> 120 ca 15th avenue-suite, usa</p>
+                    </div>
+                    <div>
+
+                        <p>
+                            <strong>
+                                Phone number
+                            </strong><br>+91 999999999</p>
+                    </div>
+                    <div>
+
+                        <p><strong>Email address</strong> <br> support@birds.com</p>
+                    </div>
+                </div>
+
+            </div>
+            <div class="col-md-1">
+                <h6>
+                    follow us
+                </h6>
+                <div class="social-icons">
+                    <a><i class="fab fa-facebook"></i></a>
+                    <a><i class="fab fa-twitter"></i></a>
+                    <a><i class="fab fa-instagram"></i></a>
+                </div>
+            </div>
+        </div>
+    </div>
 </footer>
+
 </body>
 </html>
